# TEACar-Open-Source-Autonomous-Driving-Platform

./: .gitmodules  README.md
deck/: README.md
deck/CAM/: Bottom_Frame.STL  Cage.STL  Long_Split_Pin.STL  Middle_Frame.STL  Pin.STL  Split_Pin.STL
powerboard/: BOM.xlsx  README.md
powerboard/CAM/: PowerBoardPCB.DRR  PowerBoardPCB.EXTREP  PowerBoardPCB.GBL  PowerBoardPCB.GBP  PowerBoardPCB.GBS  PowerBoardPCB.GD1  PowerBoardPCB.GG1  PowerBoardPCB.GKO  PowerBoardPCB.GM  PowerBoardPCB.GM13  PowerBoardPCB.GM15  PowerBoardPCB.GPB  PowerBoardPCB.GPT  PowerBoardPCB.GTL  PowerBoardPCB.GTO  PowerBoardPCB.GTP  PowerBoardPCB.GTS  PowerBoardPCB.LDP  PowerBoardPCB.REP  PowerBoardPCB.TXT  PowerBoardPCB.apr  Status Report.Txt
software/: .gitignore  README.md
software/src/actuator/: CMakeLists.txt  package.xml
software/src/actuator/include/: actuator.hpp
software/src/actuator/src/: pca9685_actuator.cpp
software/src/controller/: CMakeLists.txt  package.xml
software/src/controller/include/controller/: controller.hpp
software/src/controller/src/: joystick_controller.cpp  param_controller.cpp
software/src/inferencer/: CMakeLists.txt  package.xml
software/src/inferencer/include/inferencer/: inferencer.h  inferencer_c.h
software/src/inferencer/src/: tensorrt_inferencer.cpp
software/src/teacar_bringup/: CMakeLists.txt  package.xml
software/src/teacar_bringup/launch/: drive.launch.py
software/src/teacar_msgs/: CMakeLists.txt  package.xml
